[package]
edition = "2021"
name = "git-snapshot"
version = "0.1.0"

[dependencies]
git2 = "0.14.4"
log = "0.4.17"
notify = "4.0.17"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
shellexpand = "2.1.0"
structopt = "0.3.26"
thiserror = "1.0.31"
time = {version = "0.3.9", features = ["serde-human-readable"]}
[dev-dependencies]
tempfile = "3.3.0"
