[package]
edition = "2021"
name = "git-snapshot"
version = "0.1.0"

[dependencies]
git2 = "0.14.4"
humantime-serde = "1.1.1"
log = "0.4.17"
notify = "5.0.0-pre.15"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
shellexpand = "2.1.0"
structopt = "0.3.26"
thiserror = "1.0.31"
[dev-dependencies]
tempfile = "3.3.0"
