[package]
categories = ["git"]
description = "Automate snapshotting git repositories"
edition = "2021"
license = "MIT"
name = "git-snapshot"
version = "0.1.1"

[dependencies]
anyhow = "1.0.57"
dirs = "4.0.0"
git2 = "0.14.4"
humantime-serde = "1.1.1"
log = "0.4.17"
notify = "5.0.0-pre.15"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
shellexpand = "2.1.0"
structopt = "0.3.26"
thiserror = "1.0.31"
tokio = {version = "1.19.0", features = ["macros", "rt-multi-thread", "time", "sync"]}
tokio-stream = {version = "0.1.9", features = ["sync"]}

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
